# SmartLab

./: CMakeLists.txt  README.md  package.xml  qgs  requirements.txt
bundles/: bundles_test.xml
common/imp/: IDIM_framework.py  IDIM_header.py  SNUFC.py
launch/: ar_tracker_alvar.launch.xml  ar_tracker_bundles.launch.xml  ar_tracker_single.launch.xml  camera.launch  demo.launch  dsr_description_m1013.launch.xml  dsr_moveit.launch  find_object_3d.launch.xml  m1013.urdf.xacro  test.launch
previous_work/: 3dp_opener.py  kbsdemo.py  kbsdemo_2.py  unity_test.py
rviz/: snu_doosan.rviz
snu_idim_3dp/: 3dprint.py  Automate3DP.py  DeviceClass_3DP.py  DeviceClass_MS_dimension.py  MS_dimension_rosnode.py  execute3DP.py  idimAutomation.py  printer0_rosnode.py  printer1_rosnode.py  printer2_rosnode.py  printer3_rosnode.py  scan.py  selenium3DP.py  test1.gcode  test2.gcode  test3.gcode
snu_idim_3dp/Temp/: execute3DP.py  selenium3DP.py
snu_idim_3dp/gcode/: test12.gcode  test13.gcode  test18.gcode  test19.gcode  test20.gcode  test24.gcode  test5.gcode
snu_idim_3dp/printer/: 3DP_1_start.txt  3DP_1_stop.txt  3DP_2_start.txt  3DP_2_stop.txt  3DP_3_start.txt  3DP_3_stop.txt  3DP_4_stop.txt
snu_idim_3dp/src/: 3DP_1_1.txt  3DP_1_2.txt  3DP_2_1.txt  3DP_2_2.txt  3DP_3_1.txt  3DP_3_2.txt
snu_idim_3dp/test_gcode/: specimen_4.gcode  test1.gcode  test2.gcode  test3.gcode
snu_idim_BEcam/: birdeyecam.py  nonono.c
snu_idim_MS/: DeviceClass_MS_dimension.py  DeviceClass_OMM.py  MS_dimension_rosnode.py  datasql.py  omm_rosnode.py
snu_idim_MS/calib/: ret.npy  tvecs.npy
snu_idim_amr/: CMakeLists.txt  DeviceClass_AMR.py  package.xml  urdf.rviz
snu_idim_amr/launch/: display.launch  gazebo.launch
snu_idim_amr/urdf/: snu_idim_amr.csv  snu_idim_amr.urdf
snu_idim_cobot/: CMakeLists.txt  package.xml
snu_idim_cobot/bundles/: bundles_test.xml
snu_idim_cobot/launch/: ar_tracker_bundles.launch.xml  ar_tracker_single.launch.xml  camera_monitoring.launch  demo.launch  dsr_description_m1013.launch.xml  dsr_moveit.launch  realsense_setup.launch.xml  rtabmap.launch.xml  test.launch
snu_idim_cobot/previous_work/: robot_mill.py
snu_idim_cobot/specimen_image/: specimen.csv
snu_idim_cobot/specimen_image/csv/: info1.csv  info3.csv  info5.csv  info6.csv
snu_idim_cobot/src/: snu_drl_interface.py  snu_dsr_joy.py  snu_moveit_commander.py  snu_object_tracker.py  snu_vision_2d.py  snu_vision_specimen_detection.py
snu_idim_cobot_upstart/: CMakeLists.txt  VISCoRE  initialize.launch  package.xml  test.py  viscore_upstart.launch
snu_idim_common/imp/: IDIM_framework.py  IDIM_header.py
snu_idim_common/src/: ArduinoInterface.py  Cam_Streaming_Client.py  Cam_Streaming_Server.py  DeviceHUB.py  DeviceHUB2.py  DevicePluginToROS.py  SqlHelper.py  autoRun.py  cropIcon.py  datasql.py  deviceHUB.py  imagezmq.py  save_data.py  test.py
snu_idim_data/: sample.py
snu_idim_device_manager/: CMakeLists.txt  Cam_Streaming_Client.py  Cam_Streaming_Server.py  DeviceHUB.py  DeviceManager.py  DevicePluginToROS.py  ImageConverter.py  SmartLab_Client.py  SmartLab_DEMO.py  SmartLab_Instron_tending.py  SmartLab_Server.py  camera_monitoring.py  cmd_test.py  imagezmq.py  package.xml  test.py
snu_idim_device_manager/launch/: camera_monitoring.launch
snu_idim_doe/: DOE.py  TestDesigner.py  testDesigner.py
snu_idim_gui/: DoE_Create.ui  Popup.ui  SmartLab_Client.py  SmartLab_GUI.py  SmartLab_GUI.ui  SmartLab_GUI_alphaver.ui  SmartLab_GUI_betaver.ui  sqlHelper.py  sqlHelper2.py  test.csv  test.py  test.ui  to_do.sql
snu_idim_hub/: smartlab_hub_app_r0.py  smartlab_hub_app_r0.ui  smartlab_hub_db_mngr_r0.py  smartlab_hub_db_r0.db
snu_idim_instron/: DeviceClass_Instron.py  DeviceClass_Instron_zmq.py  autoRun.py  cropIcon.py  executeInstron.py  executeInstron_zmq.py  instron_rosnode.py  instron_rosnode_zmq.py  send_data.py  test.py
snu_idim_jetson/: uartInstron.py
snu_idim_laser_cutter/: DeviceClass_LaserCutter.py  comm.py  executeLaserCutter.py  test.py  test2.py
snu_idim_omm/: DeviceClass_OMM.py  omm_rosnode.py
snu_idim_slicer/: AutoSlicer.py  CMakeLists.txt  Factor2Gcode.py  Tapping.py  anet.def.json  fdmextruder.def.json  package.xml  printer3_tapping_full.gcode  specimen3.2.stl  specimen_3T.stl  test.py
snu_idim_strain/: calc_strain_.py  calib.npz  calib1.npz  camera_fps_check.py  camera_fps_check_newver.py  imagecut.py  keyboard_recorder.py  keyboard_recorder_RAM_Ver.py  keyboard_recorder_save_Ver.py  keyboard_recorder_save_Ver2.py  plot_strain_vision.py  plot_strain_visionv2.py  plt_str.py
snu_idim_strainCam/: 2_camera_fps_check.py  calc_strain_.py  keyboard_recorder.py
snu_idim_website/: zmqClientGetStatus.py
snu_idim_xmanager/: CMakeLists.txt  package.xml
snu_idim_xmanager/launch/: bridge.launch  rviz.launch  test.launch
snu_idim_xmanager/rviz/: SNU.rviz
snu_idim_xmanager/spcore_client/: spcore_client.py  spcore_client.ui  spcore_simple.py  spcore_simple.ui
snu_idim_xmanager/src/: amr_initializer.py  snu_executionManager.py  snu_joy.py
snu_idim_xmanager/src/temp/: SNU_demo.py  ar_tracker.py  communication_test.py  snu_kbs_demo.py
specimen_image/: specimen.csv
src/: 3dp_opener.py  ar_tracker.py  cnc_placer.py  doosan_joy_controller.py  drl_gripping.py  jinguk.py  ros_subscribe_opencv_yellow_extract.py  snu_2d_vision.py  snu_demo.py  snu_drl_interface.py  snu_dsr_controller.py  snu_dsr_digital_io_controller.py  snu_dsr_gripper.py  snu_dsr_joy.py  snu_gripper.py  snu_object_tracker.py  snu_vision_2d.py  unet_mini.weights  unity_test.py
syscon_msgs/: CMakeLists.txt  LICENSE.md  README.md  package.xml  setup.py
syscon_msgs/action/: TaskFlow.action  WorkFlow.action
syscon_msgs/msg/: Action.msg  ActionPoint.msg  Connection.msg  Image2.msg  MotorState.msg  Param.msg  RoboList.msg  RobotState.msg  TaskOrder.msg  TempoMove.msg  URRun.msg  URStatus.msg  WorkRequest.msg  XISList.msg  XIState.msg
syscon_msgs/srv/: AddAp.srv  CheckAp.srv  Connectivities.srv  DelAp.srv  GetRState.srv  SetGoal.srv  SetMove.srv  SetPLC.srv  SetPoint.srv  SetRoboact.srv  WorkOrder.srv  XISReq.srv
(+42 files in other folders)
